# Auto-GPT

./: cli.py  path_to_GitHub_Actions_workflow_file  setup.sh
.github/workflows/: autogpt-ci.yml
Auto-GPT/autogpt/: pyproject.toml  setup.sh
autogpts/autogpt/: Dockerfile  pyproject.toml
autogpts/autogpt/autogpt/: pyproject.toml
autogpts/autogpt/autogpt/agent_manager/: agent_manager.py
autogpts/autogpt/autogpt/agents/: agent.py
autogpts/autogpt/autogpt/app/: cli.py
autogpts/autogpt/forge/: setup
autogpts/autogpt/tests/: test_file.py  utils.py
autogpts/forge/: Dockerfile  pyproject.toml  setup
docs/content/AutoGPT/Setups/: Docker-setup.md
frontend/lib/services/: auth_service.dart
