[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "Auto-GPT"
version = "0.1.0"
description = "An experimental open-source attempt to make GPT-4 fully autonomous."

[tool.poetry.dependencies]
python = "^3.11.5"
# Add other dependencies here

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
